syntax = "proto3";

package plp.proto;

service DashboardService {
  rpc getDashboardData (DashboardRequest) returns (DashboardResponse) {}
}

message DashboardRequest {
  int32 id = 1;
  int32 classificationLimit = 15;
  string dashboardResultType = 5;
}

message DashboardResponse {
    int32 status = 200;
    string classificationName = 5;
    repeated string text = 10;
}